# MagnetWallet

./: Cargo.toml  README.md  index.html
src/: app.rs  lib.rs  main.rs
