[package]
name = "best_test_wallet"
version = "0.0.1"
authors = ["Matthias Debernardini <matthias.debernardini@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
num-format = "0.4.3"
bdk = { version = "0.23.0", default-feature = false, features = ["all-keys"] }
chrono = "0.4.22"
qrcode-generator = "4.1.6"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
